# reddit-monitor

./: .env.example  .gitignore  COMMUNITY_INTELLIGENCE_ROADMAP.md  README.md  daily_digest.py  example_digest.md  pyproject.toml  reddit_scraper.py  requirements.txt  run_digest.bat
.github/workflows/: ci.yml
tests/: conftest.py  test_digest.py  test_scraper.py
