[project]
name = "reddit-digest"
version = "0.1.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line length — handled by formatter, not lint
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"daily_digest.py" = ["E402", "I001"]
